fix guide page star block & overflow

--- a/assets/src/scss/5-pages/_guide.scss
+++ b/assets/src/scss/5-pages/_guide.scss
@@ -180,14 +180,13 @@ div.image {
 }
 
 .guide-view {
-  overflow-x: hidden;
   code,
   a {
     word-break: break-word;
   }
 
   @media (max-width: 767px)  {
-    .pull-right.content {
+    .pull-right {
       float: none !important;
     }
 
